--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,54 @@
 {
     "files.associations": {
-        "xutility": "c",
-        "array": "c",
-        "bit": "c",
-        "compare": "c",
-        "cstddef": "c",
-        "limits": "c",
-        "type_traits": "c",
-        "*.idl": "c",
-        "shader.h": "c"
+      "xutility": "c",
+      "array": "c",
+      "bit": "c",
+      "compare": "c",
+      "cstddef": "c",
+      "limits": "c",
+      "type_traits": "c",
+      "*.idl": "c",
+      "shader.h": "c",
+      "chrono": "cpp",
+      "atomic": "cpp",
+      "*.tcc": "cpp",
+      "cctype": "cpp",
+      "clocale": "cpp",
+      "cmath": "cpp",
+      "cstdarg": "cpp",
+      "cstdint": "cpp",
+      "cstdio": "cpp",
+      "cstdlib": "cpp",
+      "ctime": "cpp",
+      "cwchar": "cpp",
+      "cwctype": "cpp",
+      "deque": "cpp",
+      "unordered_map": "cpp",
+      "vector": "cpp",
+      "exception": "cpp",
+      "algorithm": "cpp",
+      "memory": "cpp",
+      "memory_resource": "cpp",
+      "optional": "cpp",
+      "ratio": "cpp",
+      "string": "cpp",
+      "string_view": "cpp",
+      "system_error": "cpp",
+      "tuple": "cpp",
+      "utility": "cpp",
+      "fstream": "cpp",
+      "initializer_list": "cpp",
+      "iosfwd": "cpp",
+      "iostream": "cpp",
+      "istream": "cpp",
+      "new": "cpp",
+      "ostream": "cpp",
+      "sstream": "cpp",
+      "stdexcept": "cpp",
+      "streambuf": "cpp",
+      "thread": "cpp",
+      "cinttypes": "cpp",
+      "typeinfo": "cpp"
     },
     "zenMode.hideLineNumbers": false,
     "zenMode.hideStatusBar": false,
